# airtablemock

./: .gitignore  CHANGELOG.md  README.md  README.rst  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
airtablemock/: __init__.py  __init__.pyi
test/: airtablemock_test.py
