[metadata]
author = Pascal Corpet
name = airtablemock
summary = Mock library for the airtable python client
license = The MIT License (MIT)
home-page = https://github.com/bayesimpact/airtablemock
description-file = README.rst
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    airtable
    api
    mock

[files]
packages = airtablemock
package-data = airtablemock = py.typed __init__.pyi

[bdist_wheel]
universal = True
